--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Formerly a musician, he's transitioned into the world of Data and Computer Science.
   This is his personal and professional blog.
 baseurl: /blog # the subpath of your site, e.g. /blog
-url: "https://josemarquez.tech" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jose-marquez89.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 paginate: 5
